# atlan

./: .gitignore  NOTICE  README.md  atlan.config.example.json  package-lock.json  package.json
docs/: DECISIONS.md  DOGFOOD.md  FLEET-TESTERS.md  HANDOFF.md  INTRO-POST.md  MORNING-REPORT.md  RECEIPTS.md  REVIEW-FINDINGS.md  REVIEW-FOR-AI.md  SECURITY.md  SETUP.md  SPEC.md  TOKEN-OPTIMIZATION.md  VAULT-DESIGN.md  VOICE-AND-MODELS.md  WORKER-DESIGN.md
docs/engines/: claude.md  gemini.md  local-and-others.md  openai.md
docs/findings/: canUseTool-is-not-a-security-gate.md
server/: package.json
server/src/: agents.js  attachments.js  auth.js  brains.js  build.js  claudeEngine.js  config.js  doctor.js  files.js  fleet.js  fsutil.js  guards.js  hierarchy.js  index.js  keys.js  localmodels.js  personas.js  preflight.js  preview.js  pty.js  push.js  routines.js  tailnet.js  voice.js
test/: .alive-smoke.mjs  .panes-smoke.mjs  .symtest.mjs  adversarial.mjs  attachments.mjs  connection.mjs  e2e.mjs  editor.mjs  function.mjs  hierarchy.mjs  mock-engine.mjs  run-all.mjs  run.sh  security.mjs  token-bench.mjs  tour.spec.mjs  ui.spec.mjs  unit.mjs  voice.mjs
vault/: README.md
vault/atlan/: adversarial-tester-pass-2026-07-22.md  dont-grep-command-output-for-presence.md  voice-provider-registry-honesty.md
web/public/: app.js  guide.js  index.html  manifest.json  style.css  sw.js
worker/: Cargo.toml
worker/src/: main.rs
